# scaffolding

./: Cargo.toml  README.md
examples/: units.rs
scaffolding-macro/: Cargo.toml
scaffolding-macro/src/: lib.rs
src/: executor.rs  lib.rs  ordering.rs  outcome.rs  report.rs  result.rs  settings.rs  test.rs  test_tree.rs
src/provider/: mod.rs  quickcheck.rs  smoke.rs
tests/: integration.rs  quickcheck.rs  smoke.rs
